fixed scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,20 @@ body {
     overflow: none;
 }
 
+/* ---------------SCROLL BAR--------------- */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background: #050505;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #3a3a3a;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(98, 98, 98);
+  }
+
 .main-container {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
